# googletestDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
googletest/ci/: linux-presubmit.sh
googletest/docs/: faq.md  gmock_cook_book.md
googletest/googlemock/: CMakeLists.txt
googletest/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
googletest/googlemock/test/: gmock-actions_test.cc  gmock-matchers_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_stress_test.cc
googletest/googletest/: CMakeLists.txt
googletest/googletest/cmake/: internal_utils.cmake
googletest/googletest/samples/: sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample8_unittest.cc
googletest/googletest/scripts/: release_docs.py  upload.py
googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
googletest/googletest/test/: googletest-death-test-test.cc  googletest-filter-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-test-part-test.cc  gtest_stress_test.cc  gtest_test_macro_stack_footprint_test.cc  (+2 more)
src/: CMakeLists.txt
src/util/: operate.cpp  operate.h
test/src/: CMakeLists.txt
test/src/util/: CMakeLists.txt  operate_test.cpp  util_test.cpp
(+19 files in other folders)
